# nonet-movie

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-installers.yml
scripts/: build-deb.sh  build-macos-app.sh  build-macos-dmg.sh  build-macos-pkg.sh  build-windows-exe.ps1  build-windows-installer.ps1  windows_main.py
src/nonet_movie/application/: discovery.py  discovery_queue.py  export_database.py  import_database.py  movie_source.py  search.py  series_discovery.py  series_discovery_queue.py  series_search.py  series_source.py  sources.py  subtitle.py
src/nonet_movie/domain/: __init__.py  link.py  movie.py  series.py  subtitle.py
src/nonet_movie/domain/service/: MovieRepositoy.py  base_repository.py  movie_repositoy.py  series_repository.py
src/nonet_movie/infrastructure/: berlin_source.py  boot.py
src/nonet_movie/infrastructure/console/: app.py  command.py  console_command_handler.py  presentation.py  transformation.py
src/nonet_movie/infrastructure/console/commands/: database_report.py  discover.py  discover_movies.py  discover_series.py  discovery_series.py  export_database.py  get_episodes.py  import_database.py  search.py  search_movies.py  search_series.py  statistics_report.py
src/nonet_movie/infrastructure/movie_source/: almas_movie.py  factory.py  subtitle_provider_factory.py  subzone_source.py
src/nonet_movie/infrastructure/persistence/: json_db_movie_repository.py  json_db_series_repository.py
src/nonet_movie/infrastructure/persistence/json_db/: __init__.py  json_db.py
