[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nonet-movie"
version = "0.1.7"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "underpyx",
    "pydmpro",
    "dddx",
    "rich",
    "questionary",
    "prompt-toolkit",
    "python-dotenv",
    "python-json-logger",
    "curl_cffi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "assertpy"
]

[tool.setuptools]
package-dir = {"" = "src"}